--- a/amstory/src/main/AndroidManifest.xml
+++ b/amstory/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NotitleTheme">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
