完善编辑界面和功能

--- a/amstory/src/main/AndroidManifest.xml
+++ b/amstory/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
             android:name=".RegisterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".StoryEidtActivity"></activity>
+        <activity android:name=".StoryEidtActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
