首页开发，增加推荐viewpager

--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile project(':andooptabframe')
     compile 'com.android.support:design:25.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
