--- a/amstory/src/main/AndroidManifest.xml
+++ b/amstory/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity
             android:name=".StoryMakeActivity"
-            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MRecordListActivity"
@@ -71,7 +71,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/NoTitile" />
         <activity android:name=".SearchActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
