--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -39,4 +39,8 @@ dependencies {
     compile 'com.android.support:design:25.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'cn.finalteam:galleryfinal:1.4.8.7'
+    compile 'jp.wasabeef:picasso-transformations:2.1.2'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 }
