--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "andoop.android.amstory"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -14,7 +14,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             moduleName "hello-jni"                    //生成的so名字
-            abiFilters "armeabi", "armeabi-v7a", "x86"  //输出指定三种abi体系结构下的so库。目前可有可无。
+            abiFilters "armeabi", "armeabi-v7a", "x86",'x86_64'  //输出指定三种abi体系结构下的so库。目前可有可无。
         }
 
     }
