--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -13,7 +13,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            moduleName "hello-jni"                    //生成的so名字
+            moduleName "data-process-jni"                    //生成的so名字
             abiFilters "armeabi", "armeabi-v7a", "x86",'x86_64'  //输出指定三种abi体系结构下的so库。目前可有可无。
         }
 
