--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -2,7 +2,16 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
+
+    signingConfigs {
+        release {
+            keyAlias 'amStory'
+            keyPassword '123456'
+            storeFile file('../KEYSTORE/keystore.jks')
+            storePassword '123456'
+        }
+    }
 
     defaultConfig {
         applicationId "andoop.android.amstory"
@@ -20,14 +29,20 @@ android {
     }
 
     buildTypes {
+        debug{
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     externalNativeBuild {
         ndkBuild {
-            path file("src\\main\\jni\\Android.mk")
+            path file("src/main/jni/Android.mk")
         }
     }
 }
