--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -1,8 +1,20 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+    jcenter()
+}
+
 android {
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
+
+    lintOptions {
+        checkReleaseBuilds true
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError true
+    }
 
     signingConfigs {
         release {
@@ -23,13 +35,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             moduleName "data-process-jni"                    //生成的so名字
-            abiFilters "armeabi", "armeabi-v7a", "x86",'x86_64'  //输出指定三种abi体系结构下的so库。目前可有可无。
+            abiFilters "armeabi", "armeabi-v7a", "x86", 'x86_64'  //输出指定三种abi体系结构下的so库。目前可有可无。
         }
 
     }
 
     buildTypes {
-        debug{
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -52,20 +64,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':andooptabframe')
+    // If you want to use the GPU Filters
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.android.support:cardview-v7:25.0.0'
-    compile project(':andooptabframe')
     compile 'com.android.support:design:25.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
-    // If you want to use the GPU Filters
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile 'com.alibaba:fastjson:1.2.8'
 }
