--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -31,6 +31,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
@@ -52,6 +53,13 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "4g"
+        preDexLibraries false
+    }
+
     externalNativeBuild {
         ndkBuild {
             path file("src/main/jni/Android.mk")
@@ -83,4 +91,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.alibaba:fastjson:1.2.8'
+    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'com.google.android:multidex:0.1'
 }
