note debug type signature

--- a/amstory/build.gradle
+++ b/amstory/build.gradle
@@ -45,7 +45,7 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+//            signingConfig signingConfigs.release
         }
         release {
             minifyEnabled false
