--- a/amstory/src/main/AndroidManifest.xml
+++ b/amstory/src/main/AndroidManifest.xml
@@ -104,8 +104,14 @@
         <activity
             android:name=".UserLikeStoryActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".fragments.UserStoryActivity"
+        <activity
+            android:name=".UserStoryActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".OthersActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".UploadOKActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
